package DatabaseInformation;

public class Information {
    public static String url = "jdbc:mysql://localhost:3306/shopping_system"; // 数据库的URL
    public static String username = "root"; // 数据库用户名
    public static String password = "z1751374435"; // 数据库密码
}
